Updated About Me, Skills,and intership details and Interests section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   const typingAnimationElement = document.getElementById('typing-animation');
 
                   // Create an array of typing text
-                  const typingTexts = ['Software Developer', 'MERN Stack Developer', 'Freelancer Artist', 'Video Editor ','Generative AI Developer'];
+                  const typingTexts = ['Software Developer', 'MERN Stack Developer', 'Freelancer Artist', 'Video Editor ', 'Generative AI Developer'];
 
                   // Create a function to display the typing animation for a given text
                   function playTypingAnimation(text) {
@@ -438,34 +438,45 @@
 
       <div class="row">
 
-
         <div class="col-md-6">
           <div class="resume-wrap ftco-animate">
             <span class="date">JULY 2025</span>
-            <h2> ExcelAssistAI</h2>
+            <h2>ExcelAssistAI</h2>
             <span class="position">AI-Powered Chatbot for College Admission Support</span>
             <p class="mt-4">
-              ExcelAssistAI is a Generative AI-based chatbot designed to assist students and parents with real-time
-              responses to admission-related queries for Excel Engineering College. Built using Gradio and the Gemini
-              API, the bot offers a user-friendly interface and is publicly hosted on <a
+              <b>ExcelAssistAI</b> is an agentive, Generative AI-based chatbot built to streamline the college admission
+              process for <b>Excel Engineering College</b>. It serves as a virtual counselor, providing real-time
+              assistance to students and parents seeking information about admissions, courses, fees, and campus
+              facilities. Developed using <b>Python</b>, <b>Gradio</b>, and <b>Google’s Gemini API</b>, the chatbot is
+              fully functional, intelligent, and publicly accessible on <a
                 href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI" target="_blank"
                 rel="noopener noreferrer">Hugging Face Spaces</a>.
             </p>
             <ul>
-              <li><b>Conversational Assistant:</b> Handles admission FAQs, course details, and general college info.
-              </li>
-              <li><b>Natural Language Understanding:</b> Uses Google’s Gemini for contextual and intelligent replies.
-              </li>
-              <li><b>Deployment:</b> Hosted publicly on <a
-                  href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI" target="_blank"
-                  rel="noopener noreferrer">Hugging Face Spaces</a> for easy access and usage.</li>
-              <li><b>User Interface:</b> Interactive Gradio-based frontend for both desktop and mobile users.</li>
-              <li><b>Technology Stack:</b> Python, Gradio, Google Generative AI (Gemini), Hugging Face.</li>
-              <li><b>Live-visit : </b> <a href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI"
+              <li><b>Conversational Assistant:</b> Seamlessly handles a variety of queries, including department
+                offerings, application deadlines, eligibility criteria, scholarship info, hostel facilities, and
+                placement records.</li>
+              <li><b>Natural Language Understanding:</b> Powered by <b>Google’s Gemini Pro</b>, it delivers
+                context-aware, precise, and human-like responses using advanced prompt engineering techniques.</li>
+              <li><b>Agentive AI Features:</b> Not only responds to user queries but proactively suggests relevant
+                information (e.g., deadlines, recommended courses) based on the flow of conversation.</li>
+              <li><b>Prompt Engineering:</b> Carefully structured prompts are used to guide the model in maintaining
+                tone, relevance, and factual accuracy specific to the college domain.</li>
+              <li><b>Deployment:</b> Hosted on <a href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI"
+                  target="_blank" rel="noopener noreferrer">Hugging Face Spaces</a> for global access, no login
+                required.</li>
+              <li><b>User Interface:</b> Built with <b>Gradio</b>, the UI is clean, responsive, and optimized for both
+                mobile and desktop, ensuring accessibility to users with minimal technical background.</li>
+              <li><b>Tech Stack:</b> Python, Gradio, Gemini API, Hugging Face Spaces, Prompt Engineering, Agentive AI
+                architecture.</li>
+              <li><b>Scalability:</b> Designed with future integration in mind — can be extended to handle fee payment
+                queries, document uploads, or even live chat with college staff via API bridge.</li>
+              <li><b>Live Visit:</b> <a href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI"
                   target="_blank" rel="noopener noreferrer">ExcelAssistAI</a></li>
             </ul>
           </div>
         </div>
+
 
 
         <div class="col-md-6">
