Updated About Me, Skills,and intership details and Interests section

--- a/index.html
+++ b/index.html
@@ -478,25 +478,43 @@
         </div>
 
 
-
         <div class="col-md-6">
           <div class="resume-wrap ftco-animate">
             <span class="date">2025</span>
             <h2>College Shuttles Tracking App (X-Link)</h2>
             <span class="position">Real-Time Vehicle Tracking System for Campus Commute</span>
             <p class="mt-4">
-              The College Shuttles Tracking App (X-Link) is designed to provide real-time tracking of college shuttles,
-              enhancing convenience and safety for students and staff. Built with a mobile-friendly interface and GPS
-              integration, the app offers live location updates, estimated arrival times, and shuttle route visibility.
+              <b>X-Link</b> is a real-time shuttle tracking web application developed to improve transportation
+              efficiency and safety across the college campus. Designed for students, faculty, and administrative staff,
+              the app provides accurate shuttle locations, estimated arrival times, and live route visualizations. Built
+              with a responsive interface and powered by GPS data, X-Link enhances daily commuting within the college
+              premises.
             </p>
             <ul>
-              <li><b>Live Location Tracking:</b> Real-time GPS tracking of shuttle movement on a map.</li>
-              <li><b>Estimated Arrival Times:</b> Display of shuttle ETAs to reduce waiting time.</li>
-              <li><b>User-Friendly Interface:</b> Responsive UI for both web and mobile platforms.</li>
-              <li><b>Admin Dashboard:</b> Manage shuttle data, routes, and schedules efficiently.</li>
-              <li><b>Notifications:</b> Alerts for shuttle arrival, delays, or schedule changes.</li>
-              <li><b>GitHub :</b> <a href="https://github.com/iamSafdarAnsari/Xlink" target="_blank"
-                  rel="noopener noreferrer">Xlink</a></li>
+              <li><b>Live Location Tracking:</b> Utilizes GPS data to fetch and display real-time shuttle positions on
+                an interactive map using tools like Leaflet or Google Maps API.</li>
+              <li><b>Estimated Arrival Time (ETA):</b> Dynamic ETA updates based on vehicle speed and traffic conditions
+                to help users plan their commute.</li>
+              <li><b>Multi-Role System:</b> Designed with separate interfaces for Students, Admins, and Drivers,
+                ensuring tailored access and functionality.</li>
+              <li><b>Admin Dashboard:</b> Admins can manage shuttle routes, track vehicle status, edit schedules, and
+                send out notifications for delays or maintenance.</li>
+              <li><b>Driver Module:</b> Allows drivers to update their current status and location manually if GPS
+                fails, enhancing fallback support.</li>
+              <li><b>Notifications:</b> Push alerts for shuttle arrivals, delays, or route changes via in-app messages
+                or SMS/email integration (optional).</li>
+              <li><b>Responsive UI:</b> Built with mobile-first design principles using HTML5, CSS3, Bootstrap, and
+                JavaScript (React/Vanilla JS), ensuring cross-device usability.</li>
+              <li><b>Tech Stack:</b> MERN Stack (MongoDB, Express.js, React.js, Node.js), Map APIs, and optional
+                Firebase/Socket.IO for real-time updates.</li>
+              <li><b>Security & Auth:</b> Includes JWT-based authentication and role-based access control to protect
+                user and admin operations.</li>
+              <li><b>Deployment:</b> Can be hosted on platforms like Netlify (Frontend) and Render/Heroku (Backend),
+                with MongoDB Atlas as cloud DB.</li>
+              <li><b>Impact:</b> Minimizes wait times, reduces congestion at pick-up points, and improves shuttle
+                utilization across campus.</li>
+              <li><b>GitHub:</b> <a href="https://github.com/iamSafdarAnsari/Xlink" target="_blank"
+                  rel="noopener noreferrer">X-Link Repository</a></li>
             </ul>
           </div>
         </div>
