Updated About Me, Skills,and intership details and Interests section

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
               <li><b>Tech Stack:</b> Python, Gradio, Gemini API, Hugging Face Spaces, Prompt Engineering, Agentive AI
                 architecture.</li>
               <li><b>Scalability:</b> Designed with future integration in mind — can be extended to handle fee payment
-                queries, document uploads, or even live chat with college staff via API bridge.</li>
+                queries, document uploads, or even live chat with college staff via API bridge.</li><br>
               <li><b>Live Visit:</b> <a href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI"
                   target="_blank" rel="noopener noreferrer">ExcelAssistAI</a></li>
             </ul>
@@ -481,7 +481,7 @@
         <div class="col-md-6">
           <div class="resume-wrap ftco-animate">
             <span class="date">2025</span>
-            <h2>College Shuttles Tracking App (X-Link)</h2>
+            <h2>College Shuttles Tracking App </h2>
             <span class="position">Real-Time Vehicle Tracking System for Campus Commute</span>
             <p class="mt-4">
               <b>X-Link</b> is a real-time shuttle tracking web application developed to improve transportation
