Updated About Me, Skills,and intership details and Interests section

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                       <p>
                         <span class="title-s">Intership:
                         </span>
-                        <span style="color:rgb(207, 129, 129);">@DataPattern.ai </span>
+                        <span style="color:rgb(207, 129, 129);">Gen-AI Intern @DataPattern.ai </span>
                       </p>
                       <p>
                         <!-- <span class="title-s">Experience: </span> <span>5 Years 3 Months</span></p> <p> -->
